Poner a Nancy al dia

--- a/app/src/main/res/layout/activity_relative_list.xml
+++ b/app/src/main/res/layout/activity_relative_list.xml
@@ -8,6 +8,7 @@
     tools:context="com.deltadax.views_example.activity.RecycleListActivity">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recylcer"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
