--- a/app/src/main/res/layout/activity_relative_list.xml
+++ b/app/src/main/res/layout/activity_relative_list.xml
@@ -12,4 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <FrameLayout
+        android:id="@+id/frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
 </LinearLayout>
